[package]
name = "askit-lancedb-agents"
version = "0.1.0"
description = "LanceDB Agents for Agent Stream Kit"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
agent-stream-kit = "0.19.0"
arrow-array = "56.2"
arrow-json = "56.2"
arrow-schema = { version = "56.2", features = ["serde"] }
futures-util = "0.3.31"
half = "2.7.1"
im = "15.1.0"
lancedb = "0.23.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch.crates-io]
agent-stream-kit = { path = "../agent-stream-kit/agent-stream-kit" }
