[package]
name = "modular-agent-lancedb"
version = "0.4.0"
description = "LanceDB Agents for Modular Agent"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2024"
license = "Apache-2.0 OR MIT"

[dependencies]
modular-agent-core = "0.22.0"
arrow-array = "56.2"
arrow-json = "56.2"
arrow-schema = { version = "56.2", features = ["serde"] }
futures-util = "0.3.31"
half = "2.7.1"
im = "15.1.0"
lancedb = "0.23.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# [patch.crates-io]
# modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
